crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__module_alias.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            pad
            incr
            pad
            push(2)
            pad
        end
        external.0xc385d42c449d3e66d0939ee887b03f4a2e2a0216d98df67b0ead518848733f63
    end
end
