crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__program_with_one_import_and_hex_call.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0x8d393214c0da2534d9cef6919a8ab03dbd193df0e0dc1d07489598d992c6410e
        end
        call.0x20234ee941e53a15886e733cc8e041198c6e90d2a16ea18ce1030e8c3596dd38
    end
end
