crates/assembly/src/tests/snapshots/miden_assembly__tests__imports__program_with_reexported_proc_in_another_library.snap
---
source: crates/assembly/src/tests/imports.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                push(4)
                push(3)
                noop
                noop
                noop
                noop
            end
            external.0x7215a23e4799f634f00964564e9a8d2b80e56aa5fb4ad048a267201e40b3ba74
        end
        external.0x5589ea83e6e7a90fba0622b7a365410af06ab787e1017a3d89a13bd433c3ef7c
    end
end
